tests/snapshots/trace_solver@7106503154638880082.snap
---
source: tests/trace_solver.rs
info:
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: true
    inherited_ref_on_ref: EatOuter
    fallback_to_outer: false
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    downgrade_mut_inside_shared: false
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: Keep
    rules_display_style: Plain
  bundle_name: ~
  request: "ref mut x: T"
---
ref mut x @ p: T
// Applying rule `BindingBorrow`
x @ &mut p: &mut T
// Applying rule `Binding`
let x: &mut T = &mut p

// Final bindings (simplified):
let x: &mut T = &mut p;
